# sre-multiagent-kubernetes

./: README.md  deploy-all.yaml  pyproject.toml
cluster-health/: Dockerfile  README.md  kagent-cluster-health.yaml  pyproject.toml
cluster-health-crew/: Dockerfile  README.md  pyproject.toml
cluster-health-crew/src/cluster_health_crew/: __init__.py  agent-card.json  crew.py  main.py  tools.py
cluster-health-crew/src/cluster_health_crew/config/: agents.yaml  tasks.yaml
cluster-health/cluster_health/: agent-card.json  agent.py  lifespan.py  tools.py
coordinator/: Dockerfile  README.md  kagent-coordinator.yaml  pyproject.toml
coordinator/coordinator/: agent-card.json  agent.py  lifespan.py
troubleshooter/: Dockerfile  README.md  kagent-troubleshooter.yaml  pyproject.toml
troubleshooter/troubleshooter/: agent-card.json  agent.py  lifespan.py  tools.py
